--- a/Natural Language Processing in TensorFlow/Week_2_Exercise_Question.ipynb
+++ b/Natural Language Processing in TensorFlow/Week_2_Exercise_Question.ipynb
@@ -29,7 +29,11 @@
       "metadata": {
         "id": "gnwiOnGyW5JK",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 219
+        },
+        "outputId": "f0f2633d-8f72-4287-c19a-ef62bdf112f8"
       },
       "source": [
         "import csv\n",
@@ -42,8 +46,26 @@
         "    https://storage.googleapis.com/laurencemoroney-blog.appspot.com/bbc-text.csv \\\n",
         "    -O /tmp/bbc-text.csv"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "--2019-12-06 14:32:57--  https://storage.googleapis.com/laurencemoroney-blog.appspot.com/bbc-text.csv\n",
+            "Resolving storage.googleapis.com (storage.googleapis.com)... 74.125.203.128, 2404:6800:4008:c01::80\n",
+            "Connecting to storage.googleapis.com (storage.googleapis.com)|74.125.203.128|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 5057493 (4.8M) [application/octet-stream]\n",
+            "Saving to: ‘/tmp/bbc-text.csv’\n",
+            "\n",
+            "\r/tmp/bbc-text.csv     0%[                    ]       0  --.-KB/s               \r/tmp/bbc-text.csv   100%[===================>]   4.82M  --.-KB/s    in 0.04s   \n",
+            "\n",
+            "2019-12-06 14:32:58 (119 MB/s) - ‘/tmp/bbc-text.csv’ saved [5057493/5057493]\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -53,12 +75,12 @@
         "colab": {}
       },
       "source": [
-        "vocab_size = # YOUR CODE HERE\n",
-        "embedding_dim = # YOUR CODE HERE\n",
-        "max_length = # YOUR CODE HERE\n",
-        "trunc_type = # YOUR CODE HERE\n",
-        "padding_type = # YOUR CODE HERE\n",
-        "oov_tok = # YOUR CODE HERE\n",
+        "vocab_size = 10000# YOUR CODE HERE\n",
+        "embedding_dim = 32 # YOUR CODE HERE\n",
+        "max_length = 120 # YOUR CODE HERE\n",
+        "trunc_type = 'pre'# YOUR CODE HERE\n",
+        "padding_type = 'pre' # YOUR CODE HERE\n",
+        "oov_tok = '<OOV> ' # YOUR CODE HERE\n",
         "training_portion = .8"
       ],
       "execution_count": 0,
@@ -69,7 +91,11 @@
       "metadata": {
         "id": "iU1qq3_SZBx_",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "d0a525bb-f866-448c-f87f-6a3e83b283dd"
       },
       "source": [
         "sentences = []\n",
@@ -79,19 +105,48 @@
         "# Expected Output\n",
         "# 153"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "153\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "eutB2xMiZD0e",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 110
+        },
+        "outputId": "9e90cf19-cff7-4c8e-9d6b-8a2494e80a4a"
       },
       "source": [
         "with open(\"/tmp/bbc-text.csv\", 'r') as csvfile:\n",
         "    # YOUR CODE HERE\n",
+        "    # Delete lists\n",
+        "    sentences = []\n",
+        "    labels = []\n",
+        "    reader = csv.reader(csvfile, delimiter=\",\")\n",
+        "    counter = 0\n",
+        "    for row in reader:\n",
+        "      if counter == 0:\n",
+        "        print (\"Skipping fist column name row!\")\n",
+        "        counter += 1\n",
+        "      else:\n",
+        "        labels.append(row[0])\n",
+        "        sentance = row[1]\n",
+        "        for word in stopwords:\n",
+        "          token = \" \" + word + \" \" # _word_ with empy space token constructor\n",
+        "          sentance = sentance.replace(token, \" \") # remove stopword\n",
+        "          sentance = sentance.replace(\"  \", \" \") # remove extra space\n",
+        "        sentences.append(sentance)\n",
         "\n",
         "    \n",
         "print(len(labels))\n",
@@ -102,6 +157,30 @@
         "# 2225\n",
         "# tv future hands viewers home theatre systems  plasma high-definition tvs  digital video recorders moving living room  way people watch tv will radically different five years  time.  according expert panel gathered annual consumer electronics show las vegas discuss new technologies will impact one favourite pastimes. us leading trend  programmes content will delivered viewers via home networks  cable  satellite  telecoms companies  broadband service providers front rooms portable devices.  one talked-about technologies ces digital personal video recorders (dvr pvr). set-top boxes  like us s tivo uk s sky+ system  allow people record  store  play  pause forward wind tv programmes want.  essentially  technology allows much personalised tv. also built-in high-definition tv sets  big business japan us  slower take off europe lack high-definition programming. not can people forward wind adverts  can also forget abiding network channel schedules  putting together a-la-carte entertainment. us networks cable satellite companies worried means terms advertising revenues well  brand identity  viewer loyalty channels. although us leads technology moment  also concern raised europe  particularly growing uptake services like sky+.  happens today  will see nine months years  time uk   adam hume  bbc broadcast s futurologist told bbc news website. likes bbc  no issues lost advertising revenue yet. pressing issue moment commercial uk broadcasters  brand loyalty important everyone.  will talking content brands rather network brands   said tim hanlon  brand communications firm starcom mediavest.  reality broadband connections  anybody can producer content.  added:  challenge now hard promote programme much choice.   means  said stacey jolna  senior vice president tv guide tv group  way people find content want watch simplified tv viewers. means networks  us terms  channels take leaf google s book search engine future  instead scheduler help people find want watch. kind channel model might work younger ipod generation used taking control gadgets play them. might not suit everyone  panel recognised. older generations comfortable familiar schedules channel brands know getting. perhaps not want much choice put hands  mr hanlon suggested.  end  kids just diapers pushing buttons already - everything possible available   said mr hanlon.  ultimately  consumer will tell market want.   50 000 new gadgets technologies showcased ces  many enhancing tv-watching experience. high-definition tv sets everywhere many new models lcd (liquid crystal display) tvs launched dvr capability built  instead external boxes. one example launched show humax s 26-inch lcd tv 80-hour tivo dvr dvd recorder. one us s biggest satellite tv companies  directtv  even launched branded dvr show 100-hours recording capability  instant replay  search function. set can pause rewind tv 90 hours. microsoft chief bill gates announced pre-show keynote speech partnership tivo  called tivotogo  means people can play recorded programmes windows pcs mobile devices. reflect increasing trend freeing multimedia people can watch want  want."
       ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Skipping fist column name row!\n",
+            "2225\n",
+            "2225\n",
+            "tv future hands viewers home theatre systems plasma high-definition tvs digital video recorders moving living room way people watch tv will radically different five years time. according expert panel gathered annual consumer electronics show las vegas discuss new technologies will impact one favourite pastimes. us leading trend programmes content will delivered viewers via home networks cable satellite telecoms companies broadband service providers front rooms portable devices. one talked-about technologies ces digital personal video recorders (dvr pvr). set-top boxes like us s tivo uk s sky+ system allow people record store play pause forward wind tv programmes want. essentially technology allows much personalised tv. also built-in high-definition tv sets big business japan us slower take off europe lack high-definition programming. not can people forward wind adverts can also forget abiding network channel schedules putting together a-la-carte entertainment. us networks cable satellite companies worried means terms advertising revenues well brand identity viewer loyalty channels. although us leads technology moment also concern raised europe particularly growing uptake services like sky+. happens today will see nine months years time uk adam hume bbc broadcast s futurologist told bbc news website. likes bbc no issues lost advertising revenue yet. pressing issue moment commercial uk broadcasters brand loyalty important everyone. will talking content brands rather network brands said tim hanlon brand communications firm starcom mediavest. reality broadband connections anybody can producer content. added: challenge now hard promote programme much choice. means said stacey jolna senior vice president tv guide tv group way people find content want watch simplified tv viewers. means networks us terms channels take leaf google s book search engine future instead scheduler help people find want watch. kind channel model might work younger ipod generation used taking control gadgets play them. might not suit everyone panel recognised. older generations comfortable familiar schedules channel brands know getting. perhaps not want much choice put hands mr hanlon suggested. end kids just diapers pushing buttons already - everything possible available said mr hanlon. ultimately consumer will tell market want. 50 000 new gadgets technologies showcased ces many enhancing tv-watching experience. high-definition tv sets everywhere many new models lcd (liquid crystal display) tvs launched dvr capability built instead external boxes. one example launched show humax s 26-inch lcd tv 80-hour tivo dvr dvd recorder. one us s biggest satellite tv companies directtv even launched branded dvr show 100-hours recording capability instant replay search function. set can pause rewind tv 90 hours. microsoft chief bill gates announced pre-show keynote speech partnership tivo called tivotogo means people can play recorded programmes windows pcs mobile devices. reflect increasing trend freeing multimedia people can watch want want.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wRaoz5WodX3P",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
       "execution_count": 0,
       "outputs": []
     },
@@ -110,16 +189,20 @@
       "metadata": {
         "id": "XfdaWh06ZGe3",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 109
+        },
+        "outputId": "2c14ffc2-c557-4e42-c7eb-3f22ca5bd9c0"
       },
       "source": [
-        "train_size = # YOUR CODE HERE\n",
+        "train_size = int(len(sentences)* training_portion)    # YOUR CODE HERE\n",
         "\n",
-        "train_sentences = # YOUR CODE HERE\n",
-        "train_labels = # YOUR CODE HERE\n",
+        "train_sentences = sentences[:train_size]         # YOUR CODE HERE\n",
+        "train_labels = labels[:train_size]               # YOUR CODE HERE\n",
         "\n",
-        "validation_sentences = # YOUR CODE HERE\n",
-        "validation_labels = # YOUR CODE HERE\n",
+        "validation_sentences = sentences[train_size: ]  # YOUR CODE HERE\n",
+        "validation_labels = labels[train_size:]          # YOUR CODE HERE\n",
         "\n",
         "print(train_size)\n",
         "print(len(train_sentences))\n",
@@ -134,23 +217,48 @@
         "# 445\n",
         "# 445"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1780\n",
+            "1780\n",
+            "1780\n",
+            "445\n",
+            "445\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "ULzA8xhwZI22",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 127
+        },
+        "outputId": "b1912850-12f9-4cd5-8962-02f0aca3b7f5"
       },
       "source": [
-        "tokenizer = # YOUR CODE HERE\n",
-        "tokenizer.fit_on_texts(# YOUR CODE HERE)\n",
-        "word_index = # YOUR CODE HERE\n",
+        "tokenizer = Tokenizer(oov_token = oov_tok,\n",
+        "                      num_words = vocab_size,\n",
+        "                      lower = True,\n",
+        "                      split =\" \"                      \n",
+        "                      )               # YOUR CODE HERE\n",
         "\n",
-        "train_sequences = # YOUR CODE HERE\n",
-        "train_padded = # YOUR CODE HERE\n",
+        "tokenizer.fit_on_texts(sentences)     # YOUR CODE HERE)\n",
+        "word_index = tokenizer.word_index     # YOUR CODE HERE\n",
+        "\n",
+        "train_sequences = tokenizer.texts_to_sequences(train_sentences) # YOUR CODE HERE\n",
+        "train_padded = pad_sequences(train_sequences,             # YOUR CODE HERE\n",
+        "                             maxlen = max_length,\n",
+        "                             padding = padding_type,\n",
+        "                             truncating = trunc_type                             \n",
+        "                             )  \n",
         "\n",
         "print(len(train_sequences[0]))\n",
         "print(len(train_padded[0]))\n",
@@ -169,19 +277,40 @@
         "# 192\n",
         "# 120"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "449\n",
+            "120\n",
+            "200\n",
+            "120\n",
+            "192\n",
+            "120\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "c8PeFWzPZLW_",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "19c3c21f-b6ea-43bd-f26b-33343fd59d73"
       },
       "source": [
-        "validation_sequences = # YOUR CODE HERE\n",
-        "validation_padded = # YOUR CODE HERE\n",
+        "validation_sequences = tokenizer.texts_to_sequences(validation_sentences)   # YOUR CODE HERE\n",
+        "validation_padded = pad_sequences(validation_sequences,                    # YOUR CODE HERE\n",
+        "                                  maxlen = max_length,\n",
+        "                                  padding = padding_type,\n",
+        "                                  truncating = trunc_type\n",
+        "                                  )\n",
         "\n",
         "print(len(validation_sequences))\n",
         "print(validation_padded.shape)\n",
@@ -190,8 +319,17 @@
         "# 445\n",
         "# (445, 120)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "445\n",
+            "(445, 120)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
